Added div structure of the page

--- a/index.html
+++ b/index.html
@@ -3,5 +3,44 @@
     <head>        
     </head>
     <body>
+        <div>
+            <div>
+                header
+                <div>
+                    logo
+                </div>
+                <div>
+                    mystery person
+                </div>
+            </div>
+    
+            <div>
+                faces
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+    
+            <div>
+                instructions
+            </div>
+        </div>
     </body>
 </html>
