Applied grid system to the header

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <div>
-            <div>
+            <div class="header">
                 <div>
                     <img src="images/logo.png"/>
                 </div>
-                <div class="card-background">
+                <div>
                     <img src="images/characters_08.jpg" />
                     <span>Yori</span>
                 </div>
