--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
     
-            <div>
+            <div class="cards">
                 <div class="card-background">
                     <img src="images/characters_01.jpg" />
                     <span>Sakura</span>
