--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     <img src="images/logo.png"/>
                 </div>
                 <div>
-                    <img src="images/characters_08.jpg" />
+                    <img class="mystery-card" src="images/characters_08.jpg" />
                     <span>Yori</span>
                 </div>
             </div>
