Added instructions class
GW Part 6 - Instructions

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
     
-            <div>
+            <div class="instructions">
                 <h2>Instructions</h2>
                 <ol>
                     <li>
