--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 <div>
                     <img src="images/logo.png"/>
                 </div>
-                <div>
-                    <img class="mystery-card" src="images/characters_08.jpg" />
+                <div class="mystery-card">
+                    <img class="mystery-card-image" src="images/characters_08.jpg" />
                     <span>Yori</span>
                 </div>
             </div>
