Created cards array and random function
GW Part 10

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="mystery-card">
                     <img class="mystery-card-image" src="images/characters_08.jpg" />
-                    <span>Yori</span>
+                    <span class="mystery-card-name">Yori</span>
                 </div>
             </div>
     
